# ros2-voice-llm-pipeline

./: .gitignore  LICENSE  ReadMe.md  gpt_enter_to_stop.py  gpt_reachy_implementation.py  helper.py  main.py  openai_implementation.py  reachy2.py  requirements.txt  stream_test.py  stt_node.py  tts_node.py
ros2_package/voice_llm_pipeline/: package.xml  setup.cfg  setup.py
ros2_package/voice_llm_pipeline/voice_llm_pipeline/: __init__.py  llm_node.py  tts_node.py
sandbox/: gpt_implementation.py  gpt_reachy_implementation.py  llm_node.py  reachy2.py
voice_pipeline/: __init__.py  audio_input.py  llm_client.py  reachy_connector.py  stt_whisper.py  text_cleaning.py  tts_output.py
